--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "react": "^16.10.1",
+    "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.10.1",
+    "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
