--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-transition": "^1.4.0",
     "react-scripts": "3.1.2",
     "styled-components": "^4.4.0",
     "webfontloader": "^1.6.28"
