--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-google-recaptcha": "^2.0.1",
+    "react-icons": "^3.7.0",
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^1.4.0",
     "react-scripts": "3.1.2",
