--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "vblogv",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://jvidalv.github.io/vblogv/",
   "dependencies": {
     "@types/react": "^16.9.11",
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
@@ -23,7 +25,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "react-snap"
+    "postbuild": "react-snap",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
