--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vblogv",
+  "name": "vvlog",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jvidalv.github.io/vblogv",
+  "homepage": "https://jvidalv.github.io/vvlog",
   "dependencies": {
     "@types/react": "^16.9.11",
     "bootstrap": "^4.3.1",
