--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "vblogv",
-  "name": "My personal blog",
+  "short_name": "vvlog",
+  "name": "pppprogramming blog",
   "icons": [
     {
       "src": "favicon.ico",
