--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^16.9.13",
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.1.1",
+    "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
