--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://jvidalv.github.io/vvlog",
   "dependencies": {
+    "@svgr/cli": "^4.3.3",
     "@types/react": "^16.9.13",
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.1.1",
