--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-google-recaptcha": "^2.0.1",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-router": "latest",
     "react-router-dom": "^5.1.2",
