--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vvlog",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://jvidalv.github.io/vvlog",
+  "version": "0.9.0",
+  "private": false,
+  "homepage": "https://vvlog.dev",
   "dependencies": {
     "@svgr/cli": "^4.3.3",
     "@types/react": "^16.9.13",
