--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@types/react": "^16.9.13",
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.1.1",
+    "history": "^4.10.1",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
