--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,25 @@
 {
   "short_name": "vvlog",
-  "name": "pppprogramming blog",
+  "name": "vvlog",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "fdark.jpg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/jpg"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "logo192.jpg",
+      "type": "image/jpg",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "logo512.jpg",
+      "type": "image/jpg",
       "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#000000"
 }
