--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router": "latest",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "super-simple-sitemap-generator": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
