--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vvlog",
-  "version": "0.9.2",
+  "version": "1.0.0",
   "private": false,
   "homepage": "https://vvlog.dev",
   "dependencies": {
@@ -11,17 +11,35 @@
     "history": "^4.10.1",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap": "1.3.0",
     "react-dom": "^16.12.0",
     "react-ga": "^2.7.0",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
-    "react-router": "latest",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.3",
     "styled-components": "^4.4.1",
     "super-simple-sitemap-generator": "^1.0.1"
+  },
+  "devDependencies": {
+    "eslint-config-universe": "^3.0.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "babel-plugin-styled-components": "^1.11.0-0",
+    "prettier": "^2.0.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "airbnb",
+      "airbnb/hooks"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,9 +48,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
