--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vvlog",
-  "version": "1.0.0",
+  "version": "2.0.0",
+  "license": "MIT",
   "private": false,
   "homepage": "https://vvlog.dev",
   "dependencies": {
